@startuml overview
title Centrifuge Protocol - Architecture Overview
hide empty members

!define CORE_COLOR #E1F5FE
!define MESSAGING_COLOR #F3E5F5
!define ADMIN_COLOR #FFF9C4
!define MANAGERS_COLOR #E8F5E9
!define VAULTS_COLOR #FCE4EC
!define ADAPTERS_COLOR #FFF3E0
!define HOOKS_COLOR #F1F8E9

skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 150
allowmixing

package "Core" CORE_COLOR {
  interface IGateway
  interface IAuth
  package "Core/Hub" {
    interface IHub
  }
  package "Core/Spoke" {
    interface ISpoke
    interface IBalanceSheet
  }
}

package "Messaging" MESSAGING_COLOR {
  interface IMessageDispatcher
  interface IMessageProcessor
}

package "Admin" ADMIN_COLOR {
  interface IRoot
}

package "Managers" MANAGERS_COLOR {
  package "Managers/Hub" {
    ' interface IHubManager
    rectangle HubManagers
  }
  package "Managers/Spoke" {
    rectangle BalanceSheetManagers
  }
}

package "Vaults" VAULTS_COLOR {
  interface IRequestManager
}

package "Hooks" HOOKS_COLOR {
  interface ITransferHook
}

IHub --> IMessageDispatcher
ISpoke --> IMessageDispatcher
IGateway --> IMessageProcessor
IMessageProcessor --> IHub
IMessageProcessor --> ISpoke
IRequestManager --> IBalanceSheet
IRequestManager -[norank]-> IMessageDispatcher
IMessageDispatcher --> IGateway
HubManagers --> IHub
BalanceSheetManagers --> IBalanceSheet
IRoot --> IAuth
ISpoke --> ITransferHook

@enduml
